bitfield/tests/11-bits-attribute-wrong.stderr
error[E0080]: evaluation panicked: expected field size to be equal to the value of the `bits` attribute
  --> tests/11-bits-attribute-wrong.rs:12:5
   |
12 |     trigger_mode: TriggerMode,
   |     ^^^^^^^^^^^^ evaluation of `size_of_field_trigger_mode_of_struct_RedirectionTableEntry_is_equal_to_the_value_of_the_bits_attribute` failed here
